Fixed overflow

--- a/style.css
+++ b/style.css
@@ -69,9 +69,9 @@ body{
         font-size: 20px;
         position: relative;
         width: 20%;
-        padding-top: 10%;
-        padding-left: 5%;
-        padding-right: 5%;
+        padding-top: 5%;
+        padding-left: 3%;
+        padding-right: 3%;
         box-sizing: border-box;
         min-height: 50vh;
         height: auto;
